--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
-  "name": "react-word-game",
+  "name": "react-word-game-app",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://dimakol.github.io/react-word-game-app/",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
@@ -23,6 +26,7 @@
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "gh-pages": "^6.3.0",
     "globals": "^16.0.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
